--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 3005",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port ${PORT-8080}",
     "export": "next export",
     "postbuild": "next-sitemap"
   },
