--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.1.0",
     "react-masonry-component": "^6.2.1",
     "react-scroll": "^1.8.1",
